change the class of list output to id

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="btn btn-success" id="submit" type="submit">SUBMIT</button>
                 </form>
                 <h1>LIST OF VISITED PLACES:</h1>
-                <ol class="listPlaces">
+                <ol id="listPlaces">
 
                 </ol>
 
