add visibility styling and jQuery code to clear the form after submition

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <button class="btn btn-success" id="submit" type="submit">SUBMIT</button>
                 </form>
                 <h1>LIST OF VISITED PLACES:</h1>
-                <ol id="listPlaces">
+                <ol id="listPlaces" class="visibility">
 
                 </ol>
 
             </div>
             <div class="col-md-6">
-                <div id="information">
+                <div id="information" class="visibility">
                     <h1>ABOUT</h1>
                     <h2></h2>
                     <p>LOCATION: <span id="locationOutput"></span></p>
